--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="styles/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>Taller multimedia 1</h1>
+    <h1>Taller-Multimedia 1</h1>
     https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/Restaurant_Amigos_de_Acapulco_%28window%29%2C_Chico.jpg/1920px-Restaurant_Amigos_de_Acapulco_%28window%29%2C_Chico.jpg
     
     <h2>Experimentos en la web 🔬⚗️</h2>
