--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/Restaurant_Amigos_de_Acapulco_%28window%29%2C_Chico.jpg/1920px-Restaurant_Amigos_de_Acapulco_%28window%29%2C_Chico.jpg
     
     <h2>Experimentos en la web 🔬⚗️</h2>
-    <p>¿Qué hemos hecho?</p>
+    <p>¿Qué hicimos?</p>
 
     <ul>
       <li>Gato glitch</li>
