--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>Taller-Multimedia 1</h1>
-    https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/Restaurant_Amigos_de_Acapulco_%28window%29%2C_Chico.jpg/1920px-Restaurant_Amigos_de_Acapulco_%28window%29%2C_Chico.jpg
+    <img scr="https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/Restaurant_Amigos_de_Acapulco_%28window%29%2C_Chico.jpg/1920px-Restaurant_Amigos_de_Acapulco_%28window%29%2C_Chico.jpg" alt="un gato glitcheado.">
     
     <h2>Experimentos en la web 🔬⚗️</h2>
     <p>¿Qué hicimos?</p>
