--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>Taller-Multimedia 1</h1>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/Restaurant_Amigos_de_Acapulco_%28window%29%2C_Chico.jpg/1920px-Restaurant_Amigos_de_Acapulco_%28window%29%2C_Chico.jpg" alt="un gato glitcheado.">
+    <img src="https://i.pinimg.com/736x/28/04/ca/2804ca0811d75c4cdaced515af3036b8.jpg" alt="un gato glitcheado.">
     
     <h2>Experimentos en la web 🔬⚗️</h2>
     <p>¿Qué hicimos?</p>
